sort.baseball.SelectBaseball.scala.error
Compilation error:
SelectBaseball:70: error: ';' expected but ',' found.
    deplace(currBase+sens)%nbBases, 0);
                                  ^SelectBaseball:72: error: ')' expected but '}' found.
}
^